--- a/css/format.css
+++ b/css/format.css
@@ -1,91 +1,88 @@
 ﻿* {
-	margin:0px;
-	padding:0px;
-	
-}
-
-body	{
-	background-color:lime;
-}
-
-#wrapper	{
-	
-
-
-
-
-}
-#oben1	{
-	
-
-
-
-
+	margin: 0px;
+	padding: 0px;
 
 }
 
-#oben2	{
-	
-
-
-
-
+body {
+	background-color: lime;
 
 }
 
-#oben3	{
-	
-
-
-
-
-
-}
-
-#navi	{
-	
-
-
-
-
-	
-}
-
-#subnavi	{
-	
-
-
-
-
+#wrapper {
+	width: 800px;
+	height: 790px;
+	background-color: aqua;
+	margin: 10px;
+	padding: 10px;
 
 }
 
-#content	{
-	
-
-
-
-
+#oben1 {
+	width: 200px;
+	height: 150px;
+	background-color: deeppink;
 
 }
 
-#bilder	{
-	
+#oben2 {
+	width: 400px;
+	height: 150px;
+	background-color: gray;
+	margin-top: -150px;
+	margin-left: 200px;
 
-
-
-
-
-
-	
 }
 
-#footer	{
-	
+#oben3 {
+	width: 200px;
+	height: 150px;
+	background-color: deeppink;
+	margin-top: -150px;
+	margin-left: 600px;
 
+}
 
+#navi {
+	height: 100px;
+	background-color: blue;
+	border-top: 10px solid black;
+	border-bottom: 10px solid black;
 
+}
 
+#subnavi {
+	height: 400px;
+	border-right: 10px solid black;
+	background-color: orange;
+	width: 140px;
 
+}
+
+#content {
+	background-color: yellow;
+	height: 400px;
+	width: 480px;
+	padding: 10px;
+	margin-left: 150px;
+	margin-top: -400px;
+
+}
+
+#bilder {
+	background-color: darkgreen;
+	width: 140px;
+	height: 400px;
+	border-left: 10px solid black;
+	margin-top: -420px;
+	margin-left: 650px;
+
+}
+
+#footer {
+	height: 100px;
+	background-color: red;
+	border-top: 10px solid black;
+	border-bottom: 10px solid black;
 
 }
